# cloudsave

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  flake.nix  go.mod
server/: BUILD.bazel  main.go
server/proto/: BUILD.bazel  server.proto
