module(name = "cloudsave")

bazel_dep(name = "rules_go", version = "0.58.3")
bazel_dep(name = "gazelle", version = "0.46.0")
bazel_dep(name = "protobuf", version = "33.0")
bazel_dep(name = "rules_proto", version = "7.1.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.3")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "org_golang_google_grpc",
)
