load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "main",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/cianjinks/cloudsave/server",
    visibility = ["//visibility:private"],
)
