load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "server_proto",
    srcs = ["server.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "server_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc_v2"],
    importpath = "github.com/cianjinks/cloudsave/server/proto",
    proto = ":server_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":server_go_proto"],
    importpath = "github.com/cianjinks/cloudsave/server/proto",
    visibility = ["//visibility:public"],
)
